# tinyllama-cli

./: .gitignore  README.md  ai_cli.py  chat.py  download_model.py  image_utils.py  pyproject.toml  requirements.txt  tinyllama.sh  tinyllama_gui_backend.py  tinyllama_perf.py  train.py  web_search.py
.github/workflows/: build-cli-artifacts.yml
api/: README.md  client.py  main.py  requirements.txt  vercel.json
cpp_extensions/: bindings.cpp  optimizer.cpp  optimizer.h  setup.py
docs/: README.md  advanced-features.md  api-reference.md  configuration.md  installation.md  model-download.md  troubleshooting.md  usage.md
node/: README.md  package.json  tsconfig.json
node/src/: api-client.ts  cli.ts  client.ts  index.ts  types.ts
node/src/components/: ChatBox.tsx
node/src/server/: api.ts
packaging/: pyinstaller-cli.spec
scripts/: build_appimage.sh  build_macos.sh  build_windows.ps1  package_runtime.py
tinyllama_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tinyllama_gui/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tinyllama_gui_backend.py  tsconfig.json  tsconfig.main.json  vite.config.ts
tinyllama_gui/src/main/: electron.d.ts  main.js  main.ts  preload.js  preload.ts
tinyllama_gui/src/renderer/: App.tsx
